# autotranslater

./: .gitignore  README.md  ai_hw_2035.html  ai_hw_2035_kr.html  ai_hw_2035_kr_v2.html  pyproject.toml  translate.py.backup  translate_enhanced.py  traslate.py
.claude/: CLAUDE.md
.claude/skills/: autotranslate.md
autotranslater/: __init__.py  cli.py  translator.py
