[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autotranslater"
version = "0.1.0"
description = "AI 기반 문서 자동 번역 도구 (Ollama)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "ollama>=0.1.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
]

[project.scripts]
autotranslate = "autotranslater.cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
include = ["autotranslater*"]
